--- a/scss/_murau.scss
+++ b/scss/_murau.scss
@@ -646,7 +646,7 @@ ul.ui-autocomplete li.ui-menu-item:hover {
 .mobile ul.ui-autocomplete {
   overflow: hidden;
   position: absolute !important;
-  z-index: 1030 !important;
+  z-index: 1040 !important;
 }
 .prateleira h2 {
   font-family: "Satisfy", cursive;
